--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "stevent-totp",
-  "version": "0.1.0",
+  "name": "@stevent-team/totp",
+  "version": "0.0.0",
   "description": "Lightweight rfc-compliant TOTP authentication library based on `crypto`",
   "repository": "https://github.com/stevent-team/totp",
+  "keywords": [
+    "2fa",
+    "totp",
+    "authentication"
+  ],
   "author": "Stevent Team",
   "license": "MIT",
   "private": false,
@@ -20,12 +25,18 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "test": "vitest"
+    "test": "vitest",
+    "lint": "eslint --ext .ts ./lib",
+    "ci:release": "yarn build && yarn changeset publish"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.0",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "eslint": "^8.32.0",
     "typescript": "^4.9.4",
     "vite": "^3.1.0",
     "vite-plugin-dts": "^1.6.5",
-    "vitest": "^0.27.3"
+    "vitest": "^0.27.3",
+    "@typescript-eslint/parser": "^5.49.0"
   }
 }
